--- a/pre-registration/pre-registration-core/pom.xml
+++ b/pre-registration/pre-registration-core/pom.xml
@@ -113,6 +113,11 @@
 			<version>${swagger.version}</version>
 		</dependency>
 		<dependency>
+   			 <groupId>com.itextpdf</groupId>
+    		<artifactId>itextpdf</artifactId>
+   			 <version>5.5.12</version> 
+		</dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger.version}</version>
